Adjust pingapp so the files get served in the container and fix some issues with submitting not working and result text being too big and getting cut off.

--- a/pingapp/pub/main.css
+++ b/pingapp/pub/main.css
@@ -5,8 +5,13 @@ body {
     text-align: center;
     font-size: 50px;
     color: white;
-    overflow: hidden;
 }
+
+/*Ping result text*/
+.results{
+	font-size:16px;
+}
+
 
 /* PING PONG TABLE */
 #ping {
